# neutrino_math

./: CMakeLists.txt
ext/: CMakeLists.txt
ext/box2d/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/math/: math.hh  matrix.hh  vector.hh  vector_fwd.hh
lib/include/math/deprecated/: vector.hh  vector_box2d.hh
lib/include/math/deprecated/detail/: matrix_expression.hh  matrix_operations.hh  value_holder.hh  vector_expression.hh  vector_functions.hh  vector_operations.hh
lib/include/math/detail/: array_utils.hh  make_matrix.hh  make_vector.hh  matrix_access.hh  matrix_expr.hh  matrix_iterator.hh  matrix_ops.hh  matrix_storage.hh  matrix_temp_value.hh  matrix_traits.hh  scalar.hh  temp_value.hh  traits.hh  vector_expr.hh  vector_expression.hh  vector_functions.hh  vector_functors.hh  vector_operations.hh  vector_ops.hh  vector_temp_value.hh
lib/include/math/lin_alg/: orthonormalize.hh  projection.hh
lib/include/neutrino/math/: math.hh  matrix.hh  matrix_fwd.hh  vector.hh  vector_fwd.hh
lib/include/neutrino/math/detail/: array_utils.hh  make_matrix.hh  make_vector.hh  matrix_access.hh  matrix_expr.hh  matrix_iterator.hh  matrix_ops.hh  matrix_storage.hh  matrix_temp_value.hh  matrix_traits.hh  scalar.hh  temp_value.hh  traits.hh  vector_expr.hh  vector_functors.hh  vector_ops.hh  vector_temp_value.hh
lib/include/neutrino/math/lin_alg/: determinant.hh  orthonormalize.hh  projection.hh  qr_decompose.hh
test/: CMakeLists.txt  main.cc  test_lin_alg.cc  test_matrix.cc  test_traits.cc  test_vector.cc  test_vector_exp.cc
